--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
   align-items: center;
   background-color: #ffffff;
 
-  /* Because we want header to be sticky later */
   height: 7.6rem;
   padding: 0 4.8rem;
   position: relative;
@@ -113,24 +112,17 @@
   background-color: rgb(160, 0, 0);
 }
 
-/* .sticky .section-hero {
-  margin-top: 9.6rem;
-} */
-
 /**************************/
 /* HERO SECTION */
 /**************************/
 
 .section-hero {
-  /* background-color: #0c0c0c; */
   background-color: #0d0d0d;
-
   padding: 9.8rem 0 2.6rem 0;
 }
 
 .hero {
   max-width: 130rem;
-  /* height: 100vh; */
   margin: 0 auto;
   padding: 0 3.2rem;
   display: grid;
@@ -266,7 +258,6 @@
 
 .step-img-box::before {
   width: 60%;
-  /* height: 60%; */
 
   /* 60% of parent's width */
   padding-bottom: 60%;
@@ -291,9 +282,6 @@
   cursor: pointer;
 }
 
-/* .demo-btn {
-  width: 10px;
-} */
 /**************************/
 /* PROJECTS SECTION */
 /**************************/
@@ -427,6 +415,7 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 1.6rem;
   padding: 1.6rem;
+  overflow: hidden;
 }
 
 .gallery-item {
@@ -435,10 +424,16 @@
 
 .gallery-item img {
   display: block;
-  /* width: 100%; */
   transition: all 0.4s;
-  height: 20rem !important;
+
+  overflow: hidden;
+  height: 13rem;
+  width: 20rem;
+  object-fit: cover;
+  /* height: 20rem !important; */
+
   display: block;
+
   margin-left: auto;
   margin-right: auto;
 }
@@ -560,24 +555,15 @@
 /**************************/
 
 .section-cta {
-  /* top / right / bottom / left */
-  /* padding: 9.6rem 0 12.8rem 0; */
-
-  /* top / horizontal / left */
   padding: 4.8rem 0 12.8rem;
 }
 
 .cta {
   display: grid;
-  /* 2/3 = 66.6% + 1/3 = 33.3% */
   grid-template-columns: 2fr 1fr;
-  /* background-color: #e67e22; */
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
   border-radius: 11px;
-
-  /* background-image: linear-gradient(to right bottom, #eb984e, #e67e22); */
   background-image: linear-gradient(to right, #808080, #ffffff);
-
   overflow: hidden;
 }
 
@@ -599,13 +585,7 @@
 }
 
 .cta-img-box {
-  background-image: 
-  
-    /* linear-gradient(
-      to right bottom,
-      rgba(235, 151, 78, 0.35),
-      rgba(230, 125, 34, 0.35)
-    ), */ url("../img/laptop-coding-screen.jpg");
+  background-image: url("../img/laptop-coding-screen.jpg");
   background-size: cover;
   background-position: left;
 }
@@ -647,7 +627,6 @@
 
 .cta-template {
   display: grid;
-  /* grid-template-columns: ; */
 }
 
 .form-row {
