--- a/css/style.css
+++ b/css/style.css
@@ -298,9 +298,31 @@
   cursor: pointer;
 }
 
-.projects:hover {
+.banner {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.banner-text {
+  background-color: #000000;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+
+.project-div:hover {
   transform: translateY(-1.2rem);
   box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.2);
+  opacity: 0.3;
+}
+
+.project-div:hover .banner {
+  opacity: 1;
 }
 
 .projects-content {
